# redesigned-spork

./: CLEANUP-SUMMARY.md  DEPLOYMENT.md  HARRYS_LILLA_LAGER_KLAR.md  PLANNING.md  PORTABLE-README.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  SCANNER_INSTRUCTIONS.md  SYSTEM_OVERVIEW.md  ULTRA_SIMPLE_OVERVIEW.md  build-portable.bat  build-portable.ps1  convert_svg.ps1  create_white_icon.ps1  index.html  package-lock.json  package.json  test_database.py  test_import.py  tsconfig.json  vite.config.ts
dist-electron/: barcode-scanner.js  category-manager.js  database.js  export-manager.js  json-database.js  main.js  preload.js
electron/: barcode-scanner.ts  category-manager.ts  database.ts  export-manager.ts  json-database.ts  main.ts  preload.ts  tsconfig.json
portable-build/: README.md
portable-build/data/: inventory.db
portable-dist/: items_import.txt
release/: Harrys-Lilla-Lager-v0.1.0-NetworkDrive-Installer.msi  README.md
release/data/: inventory.db
src/: App.css  App.tsx  styles.css  window-vibrancy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alert.rs  database.rs  export.rs  import_items.rs  lib.rs  logger.rs  main.rs  printer.rs  scanner.rs  serial_scanner.rs  theme.rs  tray.rs
src/components/: AdminSettingsModal.tsx  AdminView.tsx  BarcodeGenerator.tsx  BarcodeGeneratorModal.tsx  Dashboard.tsx  Header.tsx  InputSection.tsx  InventoryTable.tsx  ItemManagementModal.tsx  Logo.tsx  MainInventoryApp.tsx  ScanPopup.tsx  ScanWindow.tsx  Settings.tsx  (+2 more)
(+15 files in other folders)
