[package]
name = "harrys-lilla-lager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "harrys-lilla-lager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harrys_lilla_lager_lib"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "harrys-lilla-lager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serialport = "4.3"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
dirs = "5.0"
image = "0.25"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winreg", "dwmapi"] }

[profile.release]
# Optimize for size and single-file deployment
lto = true
codegen-units = 1
panic = "abort"
strip = true

